initial draft of the welcome message.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <li class="active"><a href="#">Barry Lockwood</a></li>
             <li><a href="#about">Computers</a></li>
             <li><a href="#contact">Music</a></li>
+            <li><a href="#startrek">Star Trek</a>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
@@ -58,7 +59,13 @@
     <div class="container">
       <div class="starter-template">
         <h1>Welcome!</h1>
-        <p class="lead">This site is still under construction, so please come back again in about a month.</p>
+        <p class="lead">
+        
+        I'm Barry Lockwood. <br />
+        I'm passionate about computer programming, music composition/performance, and Star Trek. <br />
+        Please look around and see some of my projects!
+        
+        </p>
       </div>
 
     </div><!-- /.container -->
