--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Starter Template for Bootstrap</title>
+    <title>Barry Lockwood</title>
 
     <!-- Bootstrap core CSS -->
     <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -30,39 +30,29 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <script src="./bower_components/angular/angular.js"></script>
+    <script src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
+    <!--  script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script -->
     <script src="index.js"></script>
   </head>
 
-  <body>
+  <body ng-app="portfolioApp">
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-        </div>
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Barry Lockwood</a></li>
-            <li><a href="#about">Computers</a></li>
-            <li><a href="#contact">Music</a></li>
+            <li><a ui-sref="home">Barry Lockwood</a></li>
+            <li><a ui-sref="about">About Me</a></li>
+            <li><a>Contact</a></li>
+            <li><a>Music</a></li>
+            <li><a>Creative Coding</a></li>
           </ul>
         </div><!--/.nav-collapse -->
-      </div>
     </nav>
 
     <div class="container">
-      <div class="starter-template">
-        <h1>Welcome!</h1>
-        <p class="lead">This site is still under construction, so please come back again in about a month.</p>
-      </div>
-
+      <div ui-view></div>
     </div><!-- /.container -->
-
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
