More changes to initial page, fixing github bug

--- a/about.html
+++ b/about.html
@@ -1,6 +1,5 @@
-<div class="jumbotron text-center">
-    <h1>The About Page</h1>
-    <p>This page demonstrates <span class="text-danger">multiple</span> and <span class="text-danger">named</span> views.</p>
+<div class='jumbotron text-center'>
+    <p class='about'>Hi! I am a software engineer, multimedia artist, and composer living in San Diego. I am currently employed at Kitu Systems, software for electric vehicle infrastructure. I am also a member of San Diego Code Kitchen, a group of artists and developers that meets semi-monthly to discuss and work on creative coding projects. </p>
 </div>
 
 <div class="row">
