--- a/home.html
+++ b/home.html
@@ -1,9 +1,6 @@
 <div class="jumbotron text-center">
-    <h1>The Homey Page</h1>
-    <p>This page demonstrates <span class="text-danger">nested</span> views.</p> 
-    
-    <a ui-sref=".list" class="btn btn-primary">List</a>
-    <a ui-sref=".paragraph" class="btn btn-danger">Paragraph</a>   
+    <h1>Barry Lockwood</h1>
+    <p>Software Engineer, Multimedia Artist, Composer</p>   
 </div>
 
-<div ui-view></div>
+<div ui-view="about"></div>
