--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="bower_components/bootstrap/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
+    <!--  Google Fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Manuale' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
     <!-- Custom styles for this template -->
     <link href="starter-template.css" rel="stylesheet">
 
