--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <script src="./bower_components/angular/angular.js"></script>
+    <!--  script src="./bower_components/angular/angular.js"></script -->
+    <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
+    <!-- script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script -->
     <script src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <!--  script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script -->
     <script src="index.js"></script>
