updating url for angular and some css links

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <title>Barry Lockwood</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="bower_components/bootstrap/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="./bower_components/bootstrap/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!--  Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Manuale' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -24,7 +24,7 @@
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="bower_components/bootstrap/assets/js/ie-emulation-modes-warning.js"></script>
+    <script src="./bower_components/bootstrap/assets/js/ie-emulation-modes-warning.js"></script>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -33,10 +33,9 @@
     <![endif]-->
 
     <!--  script src="./bower_components/angular/angular.js"></script -->
-    <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
+    <script src="https://code.angularjs.org/1.2.13/angular.js"></script>
     <!-- script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script -->
     <script src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
-    <!--  script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script -->
     <script src="index.js"></script>
   </head>
 
