14_bug_fixes fixing home page url and landing page, and css on header to remove extra spaces

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
     <!--  script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script -->
     <script src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="index.js"></script>
+
+    <base href="/">
   </head>
 
   <body ng-app="portfolioApp">
