Some bug fixes, adding resume, and fixing colors and font

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="./bower_components/angular/angular.js"></script>
     <!--  script src="https://code.angularjs.org/1.2.13/angular.js"></script -->
     <!--  script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.16/p5.js"></script>
     <script src="./bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="index.js"></script>
 
@@ -52,6 +53,7 @@
           <a class="logo-upperright" ui-sref="home">Barry Lockwood</a>
            
           <ul class="nav navbar-nav navbar-right">
+            <li><a ui-sref="resume">Resume</a></li>
             <li><a ui-sref="contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
