--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <div class='about text-center'>
-    <p>Hi! I am a software engineer, multimedia artist, and composer living in San Diego. I am currently employed at Kitu Systems, making software for electric vehicle infrastructure. I am also a member of San Diego Code Kitchen, a group of artists and developers that meets semi-monthly to discuss and collaborate on creative coding projects. I am interested in making art that describes what it is to be human in the 21st century, and I am especially interested in music and sound. </p>
+    <p>Hi! I am a software engineer and composer living in San Diego. </p>
 </div>
 
 
