--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
            
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://barrylockwood.bandcamp.com">Music</a></li>
-            <li><a ui-sref="resume">Resume</a></li>
+            <li><a ui-sref="resume">Engineering</a></li>
             <li><a ui-sref="contact">Contact</a></li>
           </ul>
         </div><!--/.nav-collapse -->
