--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,7 @@
 <div class="contact">
 <p>
-Email: <a href="mailto:barrylockwood.swdev@gmail.com">barrylockwood.swdev@gmail.com</a> (best option)
+Email: <a href="mailto:barrylockwood.swdev@gmail.com">barrylockwood.swdev@gmail.com</a> (best)
 <br />
-Instagram: @barrylockwood (checked occasionally)
-<br />
-Twitter: @barry_lockwood (checked rarely)
+Instagram: @barrylockwood
 </p>
 </div>
