--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <a class="logo-upperright" ui-sref="home">Barry Lockwood</a>
            
           <ul class="nav navbar-nav navbar-right">
+            <li><a href="https://instagram.com/barrylockwood">Latest News</a></li>
             <li><a href="https://barrylockwood.bandcamp.com">Music</a></li>
             <li><a ui-sref="resume">Engineering</a></li>
             <li><a ui-sref="contact">Contact</a></li>
