--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
            
           <ul class="nav navbar-nav navbar-right">
             <li><a href="https://instagram.com/barrylockwood">Latest News</a></li>
+            <li><a href="https://barrylockwoodswdev.wordpress.com">Blog</a></li>
             <li><a href="https://barrylockwood.bandcamp.com">Music</a></li>
             <li><a ui-sref="resume">Engineering</a></li>
             <li><a ui-sref="contact">Contact</a></li>
